appId: org.futo.polycentric.dev
---
- launchApp:
    appId: org.futo.polycentric.dev
    clearState: true
- runFlow:
    when:
      platform: Android
    commands:
      - extendedWaitUntil:
          visible: 'http://.*:8081'
          timeout: 60000
      - tapOn: 'http://.*:8081'
      - extendedWaitUntil:
          visible: 'Continue'
          timeout: 180000
      - tapOn: "Continue"
      - back
- extendedWaitUntil:
    visible: 'Create new identity'
    timeout: 180000
